@@ -2,6 +2,8 @@
 
 	* testsuite/klatency: Add test duration switch (-T).
 
+	* fusion: Corrected some grammatics in comments.
+
 2005-03-14  Philippe Gerum  <rpm@xenomai.org>
 
 	* testsuite/klatency/latency-module.c (__latency_init): Remove fpu
